# bio-projects

./: README.md  main.py  pyproject.toml
models/merge_dna/arch/: latent_block.py  local_decoder.py  local_encoder.py  merge_dna.py
models/nt50_gene_family/arch/: nt50m_model.py
projects/dna/gene_expression/notebooks/: alpha_genome_performance.ipynb  merge_dna_demo.ipynb
projects/dna/gene_expression/scripts/: pretrain_merge_dna.py
projects/dna/gene_family/: README.md
projects/dna/gene_family/notebooks/: dna_seq_families_analysis.ipynb
projects/dna/gene_family/scripts/: benchmark_models.py  benchmark_models.yaml  create_datasets.py  create_datasets.yaml  train_naive_model.py  train_naive_model.yaml  train_nt_model.py  train_nt_model.yaml
